Comments out width/height on checkbox to prevent crash in Chrome and Safari on iPhone.

--- a/public/css/active.css
+++ b/public/css/active.css
@@ -94,9 +94,10 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+/*	Setting width/height to 0 causes app to crash in Chrome on iPhone
 	width: 0;
 	height: 0;
-	z-index: 11;
+*/	z-index: 11;
 	cursor: pointer;
 }
 
